[package]
name = "rust-uniswap-task"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
anyhow = "1.0"
futures = "0.3.14"
tokio = "1.21.2"
hex = "0.4.3"
web3 = "0.18.0"
ethabi = "18.0.0"
num-bigint = "0.4.6"
num-traits = "0.2.19"
num-integer = "0.1.46"
log = "0.4.25"
